--- a/www/css/homepage.css
+++ b/www/css/homepage.css
@@ -2,6 +2,22 @@
     height: 100%;
   }
 
+
+.form-textarea {
+
+    margin-top: 50px;
+    display: block;
+    width: 100%;
+    vertical-align: middle;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
   body {
     height: 100%;
         margin-bottom: none !important;
@@ -276,4 +292,10 @@ overflow-y: auto;
 
 #add-contact-resultbox>ul li:hover{
   background-color: #f5f5f5;
+}
+
+#add-contact-new-msg-resultbox ul {
+max-height: 50px;
+list-style: none;
+
 }
