Ajout de la licence et de commentaires

--- a/www/css/homepage.css
+++ b/www/css/homepage.css
@@ -113,6 +113,7 @@ margin-top:  15px !important;
 
 #msg-list >ul{
   list-style: none;
+  padding: 0;
 }
 
   .selected {
@@ -205,6 +206,7 @@ margin-bottom: 30px;
 
 .topic > ul {
   list-style: none;
+  padding: 0;
 }
 
 
